# JudasLegal

./: .dockerignore  .env.example  .env.vercel  .gitignore  .replit  .vercel-env.txt  .vercelignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DROPLET_DEPLOY_GUIDE.md  Dockerfile  Dockerfile.frontend  EXECUTE_DEPLOY.md  FRONTEND_BACKEND_CONFIG.md  IMPLEMENTACAO_DETALHADA.md  LICENSE  Pipfile  QUICK_DEPLOY.md  RAILWAY_DEPLOYMENT.md  RAILWAY_LOGIN_HELP.md  README.md  README_BACKUP.md  SUPABASE_SETUP.md  VERCEL_BACKEND_ACCESS.md  VERCEL_DEPLOYMENT.md  VERCEL_DEPLOYMENT_GUIDE.md  VERCEL_FIX_GUIDE.md  VERCEL_LOGIN_HELP.md  VERCEL_PROBLEM_ANALYSIS.md  VERCEL_QUICK_START.md  app.py  app.yaml  auth-server-broken.js  auth-server-old.js  auth-server.js  backend_complete.py  configure-env.sh  deploy-backend-vercel.sh  deploy-digitalocean.sh  deploy-droplet.sh  (+63 more)
.next/: BUILD_ID  build-manifest.json  export-detail.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
api/: admin.py  auth.py  chat.py  index.py  main.py
app/: __init__.py
attached_assets/: Pasted--An-lise-e-Melhorias-JudasLegal-PWA-An-lise-Geral-do-Projeto-O-JudasLegal-uma-PWA--1753018371431_1753018371432.txt  Pasted--DOCTYPE-html-html-lang-pt-head-meta-charset-UTF-8-meta-name-viewport-con-1753024032646_1753024032647.txt  Pasted--Guia-de-Implementa-o-Sistema-de-Tooltips-Legais-1-Estrutura-de-Arquivos-src--1752961044228_1752961044229.txt  Pasted--Integra-o-do-Claude-3-ao-JudasLegal-Vis-o-Geral-da-Arquitetura-Atual-Backend-FastAP-1753017611565_1753017611566.txt  (+5 more)
components/: AuthGuard.js  (+16 more)
(+316 files in other folders)
