[project]
name = "judas-legal-assistant"
version = "1.0.0"
description = "Legal assistant for Mozambican law with RAG functionality"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "openai",
    "python-multipart",
    "pydantic"
]

[project.scripts]
start = "main:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"