[project]
name = "judas-legal-assistant"
version = "1.0.0"
description = "RAG-powered legal chatbot for Mozambican law"
authors = [
    {name = "Judas Legal Assistant", email = "admin@judas.legal"}
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "openai>=1.3.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6"
]

[tool.setuptools]
py-modules = ["main"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
judas = "main:main"